fix header and hero styles for home page on mobile

--- a/wp-content/themes/master/scss/components/comp_hero.scss
+++ b/wp-content/themes/master/scss/components/comp_hero.scss
@@ -212,7 +212,6 @@ $vh-content: 50vh;
 .hero__slideshow {
   &.-home {
     li { 
-      height: auto;
       min-height: 650px;
     }
   }
