--- a/wp-content/themes/master/style.css
+++ b/wp-content/themes/master/style.css
@@ -6733,7 +6733,6 @@ form ul li {
     bottom: 0px;
     padding-bottom: 10px; }
   .hero__slideshow.-home li {
-    height: auto;
     min-height: 650px; }
   .hero__slideshow.-work {
     height: 80vh; }
@@ -7613,17 +7612,16 @@ header.smaller {
   border: none;
   height: 5px;
   width: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   transition: all .35s ease;
-  cursor: pointer; }
+  cursor: pointer;
+  display: block; }
 
-.button_container span:nth-of-type(2) {
-  top: 11px; }
-
-.button_container span:nth-of-type(3) {
-  top: 22px; }
+.button_container > span:nth-of-type(2),
+.button_container > span:nth-of-type(3) {
+  margin-top: 6px; }
 
 #overlay-menu {
   margin-top: 100px;
@@ -7726,7 +7724,8 @@ header.smaller {
   nav.header__nav {
     display: none; }
   .button_container {
-    display: block; }
+    display: block;
+    top: 37px; }
   .navicon {
     display: block;
     z-index: 9999;
@@ -7763,11 +7762,11 @@ header.smaller {
 /* ----------------------------------------------------- */
 @media all and (max-width: 35em) {
   /* ----------------------------------------------------- */
-  .button_container {
-    display: block;
-    top: 11px; }
   header {
     padding: 0px 15px; }
+    header .button_container {
+      display: block;
+      top: 11px; }
     header .header__inner {
       height: 50px; }
     header .header__logo__link {
@@ -7785,18 +7784,25 @@ header.smaller {
       height: 40px;
       width: 42px;
       padding: 12px 14px 10px 14px; }
-  header.smaller .header__inner {
-    height: 40px !important; }
-  header.smaller .header__logo__link {
-    margin-top: 7px; }
-    header.smaller .header__logo__link .header__logo__image {
-      width: 150px !important; }
-  header.smaller .navicon {
-    top: 0;
-    width: 46px;
-    height: 40px;
-    right: -15px;
-    padding: 12px 16px 8px 16px; }
+  header.smaller {
+    height: 45px; }
+    header.smaller .button_container {
+      display: block;
+      top: 9px; }
+    header.smaller .header__inner {
+      height: 40px !important; }
+    header.smaller .header__logo__link {
+      margin-top: 7px; }
+      header.smaller .header__logo__link .header__logo__text {
+        font-size: 1.3em; }
+      header.smaller .header__logo__link .header__logo__image {
+        width: 150px !important; }
+    header.smaller .navicon {
+      top: 0;
+      width: 46px;
+      height: 40px;
+      right: -15px;
+      padding: 12px 16px 8px 16px; }
   /* ----------------------------------------------------- */ }
 
 /* ----------------------------------------------------- */
